--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -124,7 +124,7 @@ body{
 		font-family: 'Roboto Condensed', sans-serif;
 		padding: .6em 1.8em;
 		background-color: rgba(255, 255, 255, .1);
-		border-color: green;
+		border-color: #fff;
 		
 		&:hover{
 			
